[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/interface/Transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/interface/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=3]
[ext_resource path="res://scenes/interface/TButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/interface/Pause.gd" type="Script" id=5]

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="HContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftScreen" type="ViewportContainer" parent="HContainer"]
margin_right = 78.0
margin_bottom = 180.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HContainer/LeftScreen"]
size = Vector2( 78, 180 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="LCamera" parent="HContainer/LeftScreen/Viewport" instance=ExtResource( 2 )]

[node name="MidleScreen" type="ViewportContainer" parent="HContainer"]
margin_left = 82.0
margin_right = 238.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
stretch = true

[node name="Viewport" type="Viewport" parent="HContainer/MidleScreen"]
size = Vector2( 156, 180 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="MCamera" parent="HContainer/MidleScreen/Viewport" instance=ExtResource( 2 )]

[node name="RightScreen" type="ViewportContainer" parent="HContainer"]
margin_left = 242.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HContainer/RightScreen"]
size = Vector2( 78, 180 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="RCamera" parent="HContainer/RightScreen/Viewport" instance=ExtResource( 2 )]

[node name="Transition" parent="." instance=ExtResource( 1 )]

[node name="Pause" type="Node2D" parent="."]
pause_mode = 2
visible = false
position = Vector2( 110, 0 )
script = ExtResource( 5 )

[node name="VContainer" type="VBoxContainer" parent="Pause"]
margin_right = 100.0
margin_bottom = 180.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Pause/VContainer" instance=ExtResource( 4 )]
margin_top = 68.0
margin_bottom = 88.0

[node name="Menu" parent="Pause/VContainer" instance=ExtResource( 4 )]
margin_top = 92.0
margin_bottom = 112.0
scene = "res://scenes/interface/Menu.tscn"
[connection signal="send_scene" from="Pause/VContainer/Resume" to="Pause" method="on_resume_send_scene"]
[connection signal="send_scene" from="Pause/VContainer/Menu" to="Pause" method="on_menu_send_scene"]
